[project]
name = "protocols-and-composition-in-python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "DipendraPandey", email = "dipendra.pandey666@gmail.com" }
]
dependencies = [
    "logging>=0.4.9.6",
    "typer>=0.12.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/protocols_and_composition_in_python"]
